--- a/src/pages/userInfo/UserInfo.css
+++ b/src/pages/userInfo/UserInfo.css
@@ -1,3 +1,28 @@
 .user-profile {
-  margin: 50px auto;
+  
+}
+
+.user-profile .user-info {
+  text-align: center;
+  background-color: #f3f3f3;
+  padding: 30px 10px;
+}
+
+.user-profile .user-info img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%
+}
+
+.user-profile .user-articles {
+  margin-top: 30px;
+}
+
+.user-profile .user-articles button:hover {
+  cursor: pointer;
+  border: none;
+}
+
+.user-profile .user-articles button:focus {
+  outline: none;
 }
