--- a/src/App.css
+++ b/src/App.css
@@ -16,3 +16,14 @@
   outline: none;
   box-shadow: none;
 }
+
+.m-icon {
+  position: relative;
+  top: 2px;
+  right: 2px;
+  font-size: 16px;
+}
+
+.m-icon:hover {
+  opacity: 1;
+}
